force-app/main/default/objects/Account/fields/FinServ__LastTransactionDateJointOwner__c.field-meta.xml
<CustomField>
    <fullName>FinServ__LastTransactionDateJointOwner__c</fullName>
    <description>Joint owner&#39;s last transaction date.</description>
    <label>Last Transaction Date - Joint Owner</label>
    <type>DateTime</type>
</CustomField>