force-app/main/default/objects/Account/fields/FinServ__NextReview__c.field-meta.xml
<CustomField>
    <fullName>FinServ__NextReview__c</fullName>
    <inlineHelpText>This is the due date, not the date of the actual meeting</inlineHelpText>
    <label>Next Review</label>
    <type>Date</type>
</CustomField>