force-app/main/default/objects/Account/fields/FinServ__Notes__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Notes__c</fullName>
    <inlineHelpText>Visible in Client Portal. These notes come from the client&#39;s fact find when adding a child or other important family member. 

Any Nova notes should be added as appropriate facts or elsewhere in the profile.</inlineHelpText>
    <label>Important Notes</label>
    <type>TextArea</type>
</CustomField>