force-app/main/default/objects/Account/fields/FinServ__Status__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Junior Policy Holder</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Verifying</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Reported Deceased</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>To be classified</fullName>
            </value>
            <value>
                <fullName>Forgotten</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>