force-app/main/default/objects/Account/fields/FinServ__TotalClaimAmountPaid__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalClaimAmountPaid__c</fullName>
    <description>Total amount paid for all the claims that were ever raised for the policies currently owned by the policyholder&#39;s primary household.</description>
    <inlineHelpText>This includes amount paid for all the claims (irrespective of their current status), including the ones that are settled, as long as the related policy is active.</inlineHelpText>
    <label>Total Claim Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>