force-app/main/default/objects/Account/fields/Giving__c.field-meta.xml
<CustomField>
    <fullName>Giving__c</fullName>
    <description>Notes on charitable contributions</description>
    <label>Giving</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>