force-app/main/default/objects/Account/fields/GoogleDriveFolder__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolder__c</fullName>
    <description>Link to client&apos;s folder in the Google Drive</description>
    <label>Google Drive folder</label>
    <type>Url</type>
</CustomField>