force-app/main/default/objects/Account/fields/GoogleDriveFolderId__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderId__c</fullName>
    <description>To store the google drive folder ID and populated when a household account is created. Used to construct the google drive URL for the user to navigate to.</description>
    <externalId>true</externalId>
    <label>Google Drive Folder ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>