force-app/main/default/objects/Account/fields/GoogleDriveFolderIdPortalDocuments__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderIdPortalDocuments__c</fullName>
    <externalId>true</externalId>
    <label>Google Drive folder ID portal documents</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>