force-app/main/default/objects/Account/fields/GoogleDriveFolderIdPortalDocumentsUpload__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderIdPortalDocumentsUpload__c</fullName>
    <description>The ID of the Google Drive folder where documents can be uploaded by the client.</description>
    <externalId>true</externalId>
    <label>Google Drive folder ID portal uploads</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>