force-app/main/default/objects/Account/fields/GoogleDriveFolderIdReviewed__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderIdReviewed__c</fullName>
    <description>Has the ID of the Google Drive folder been reviewed?</description>
    <label>Google Drive folder ID reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>