force-app/main/default/objects/Account/fields/HasClientTableRow__c.field-meta.xml
<CustomField>
    <fullName>HasClientTableRow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Business Use: To mark when the clients assets are visible in the portal. 
Tech use: Ticked when clients info is visible in dashboard. 
Data Inputters: System 
Data Users: Users who want to know if info is visible on dashboard</description>
    <label>Has client table row</label>
    <type>Checkbox</type>
</CustomField>