force-app/main/default/objects/Account/fields/Household_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Household_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to primary household from person account</description>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the household field must be a household. 

(Admin message: lookup filter criteria not met on Household_Lookup on the Account object)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Person Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>