force-app/main/default/objects/Account/fields/HubwisePersonId__c.field-meta.xml
<CustomField>
    <fullName>HubwisePersonId__c</fullName>
    <description>Captures the person&#39;s unique identifier in Hubwise. This key allows us to store a reliable link between the 2 systems, supporting data updates, reconciliation, and shortcuts like buttons that link to the person&#39;s investor page.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Hubwise Person ID must be in a format of CPI000#####.</inlineHelpText>
    <label>Hubwise person ID</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>