force-app/main/default/objects/Account/fields/Information_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Information_Request_Date__c</fullName>
    <description>Date on which the client requested additional information</description>
    <label>Date additional information requested</label>
    <type>Date</type>
</CustomField>