force-app/main/default/objects/Account/fields/Intelligent_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Intelligent_Office_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>https://www.intelligent-office.net/nio/clientDashboard/23541387/dashboard/0

The numbers in the URL</inlineHelpText>
    <label>Intelligent Office ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>