force-app/main/default/objects/Account/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>This field is no longer used. Any information should be captured as facts or elsewhere on the profile.</description>
    <inlineHelpText>This field is no longer used. Any information should be captured as facts or elsewhere on the profile.</inlineHelpText>
    <label>Internal notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>