force-app/main/default/objects/Account/fields/is_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>is_Active_Status__c</fullName>
    <description>Used in reporting</description>
    <formula>ISPICKVAL(FinServ__Status__c,&quot;Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is active status</label>
    <type>Checkbox</type>
</CustomField>