force-app/main/default/objects/Account/fields/Is_Will_Up_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Will_Up_to_Date__c</fullName>
    <description>Indicates if the clients will is up to date</description>
    <label>Is will up to date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>