force-app/main/default/objects/Account/fields/ISAs__c.field-meta.xml
<CustomField>
    <fullName>ISAs__c</fullName>
    <label>ISAs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>