force-app/main/default/objects/Account/fields/ISAs_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ISAs_Frequency__c</fullName>
    <label>ISAs Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>