force-app/main/default/objects/Account/fields/IsaSavingMonthly__c.field-meta.xml
<CustomField>
    <fullName>IsaSavingMonthly__c</fullName>
    <description>Takes ISA savings value at any frequency and returns monthly</description>
    <formula>IF( ISPICKVAL( ISAs_Frequency__c  , &quot;Weekly&quot;), 52*ISAs__c/12, IF(ISPICKVAL(ISAs_Frequency__c, &quot;Monthly&quot;), ISAs__c,
IF(ISPICKVAL(ISAs_Frequency__c, &quot;Annually&quot;), ISAs__c/12,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISA Saving (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>