force-app/main/default/objects/Account/fields/KYC_Date_New__c.field-meta.xml
<CustomField>
    <fullName>KYC_Date_New__c</fullName>
    <description>Formula that pulls the latest KYC date from the related AML check</description>
    <formula>AML_Check__r.AML_Completed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC date (new)</label>
    <type>Date</type>
</CustomField>