force-app/main/default/objects/Account/fields/KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status__c</fullName>
    <description>Formula that pulls the KYC status from the related KYC record</description>
    <formula>TEXT(AML_Check__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC status (new)</label>
    <type>Text</type>
</CustomField>