force-app/main/default/objects/Account/fields/Last_Client_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Update__c</fullName>
    <description>Last time the client updated their profile</description>
    <label>Last client update</label>
    <type>DateTime</type>
</CustomField>