force-app/main/default/objects/Account/fields/Last_Completed_by_Client__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_by_Client__c</fullName>
    <label>Last completed by client</label>
    <type>DateTime</type>
</CustomField>