force-app/main/default/objects/Account/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <description>Used for formula calculations on opportunities and for creating MI.</description>
    <label>Lead created date</label>
    <type>DateTime</type>
</CustomField>