force-app/main/default/objects/Account/fields/LeadSourceNotes__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceNotes__c</fullName>
    <description>To capture free text notes supporting lead source. Should be populated on the lead and merged across to the household. View only on households.</description>
    <label>Lead source notes</label>
    <type>TextArea</type>
</CustomField>