force-app/main/default/objects/Account/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Legal name mapped from lead.</description>
    <label>Legal Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>