force-app/main/default/objects/Account/fields/List_Connections_with_the_USA__c.field-meta.xml
<CustomField>
    <fullName>List_Connections_with_the_USA__c</fullName>
    <description>Specified what type of connections the person has with the USA</description>
    <label>List connections with the USA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Citizen</fullName>
            </value>
            <value>
                <fullName>Green Card Holder</fullName>
            </value>
            <value>
                <fullName>Pay Taxes in the US</fullName>
            </value>
            <value>
                <fullName>US Bank Account</fullName>
            </value>
            <value>
                <fullName>US Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>