force-app/main/default/objects/Account/fields/LOA_Statuses__c.field-meta.xml
<CustomField>
    <fullName>LOA_Statuses__c</fullName>
    <description>Rolls up the Statuses of LOAs</description>
    <inlineHelpText>Rolls up the Statuses of LOAs</inlineHelpText>
    <label>LOA statuses</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>