force-app/main/default/objects/Account/fields/LOAs_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>LOAs_Outstanding__c</fullName>
    <description>Rolls up the number of outstanding LOAs</description>
    <inlineHelpText>Rolls up the number of outstanding LOAs</inlineHelpText>
    <label>LOA Updates Required</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>