force-app/main/default/objects/Account/fields/LTA_Certificate_URL__c.field-meta.xml
<CustomField>
    <fullName>LTA_Certificate_URL__c</fullName>
    <description>URL to stored LTA certificate</description>
    <label>LTA certificate URL</label>
    <type>Url</type>
</CustomField>