force-app/main/default/objects/Account/fields/Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Maiden_Name__c</fullName>
    <description>Persons maiden name</description>
    <label>Maiden name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>