force-app/main/default/objects/Account/fields/match_id__c.field-meta.xml
<CustomField>
    <fullName>match_id__c</fullName>
    <description>external id that is used when a record is created from the Profile</description>
    <label>match id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>