force-app/main/default/objects/Account/fields/MigrationGiving__c.field-meta.xml
<CustomField>
    <fullName>MigrationGiving__c</fullName>
    <description>Field indicating review of giving value in migration</description>
    <label>Migration giving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No action</fullName>
                <default>true</default>
                <label>No action</label>
            </value>
            <value>
                <fullName>Review needed</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Reviewed with Jemma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>