force-app/main/default/objects/Account/fields/MigrationSpendingSaving__c.field-meta.xml
<CustomField>
    <fullName>MigrationSpendingSaving__c</fullName>
    <label>MigrationSpendingSaving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No action</fullName>
                <default>true</default>
                <label>No action</label>
            </value>
            <value>
                <fullName>Review needed</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>