force-app/main/default/objects/Account/fields/Next_Review_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A process field used to test if the next review scheduled action is queued.</description>
    <label>Next review scheduled</label>
    <type>Checkbox</type>
</CustomField>