force-app/main/default/objects/Account/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <description>Persons nickname</description>
    <label>Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>