force-app/main/default/objects/Account/fields/Nominated_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominated Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>FinServ__FinancialAccount__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Current Account</value>
        </filterItems>
        <filterItems>
            <field>FinServ__FinancialAccount__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Savings Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Primary Bank Account For</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>