force-app/main/default/objects/Account/fields/Nominated_Bank_Details_Visible__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Bank_Details_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated by enhanced bank details. When enabled, the client can enter their nominated bank details and view payment details in the portal.</description>
    <inlineHelpText>When enabled, the client can enter their nominated bank details and view payment details in the portal.</inlineHelpText>
    <label>Bank details visible (legacy)</label>
    <type>Checkbox</type>
</CustomField>