force-app/main/default/objects/Account/fields/NonEssentialSpendingMonthly__c.field-meta.xml
<CustomField>
    <fullName>NonEssentialSpendingMonthly__c</fullName>
    <description>Takes non essential spending at any frequency and returns monthly amount</description>
    <formula>IF( ISPICKVAL(OW_non_essential_spending_frequency__c, &quot;Weekly&quot;),  52*OW_non_essential_spending__c/12, IF(ISPICKVAL(OW_non_essential_spending_frequency__c, &quot;Monthly&quot;), OW_non_essential_spending__c,
IF(ISPICKVAL(OW_non_essential_spending_frequency__c, &quot;Annually&quot;), OW_non_essential_spending__c/12,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-essential spending (monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>