force-app/main/default/objects/Account/fields/NovaContactId__c.field-meta.xml
<CustomField>
    <fullName>NovaContactId__c</fullName>
    <description>Unique external ID for contact</description>
    <externalId>true</externalId>
    <label>Nova contact ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>