force-app/main/default/objects/Account/fields/NovaId__c.field-meta.xml
<CustomField>
    <fullName>NovaId__c</fullName>
    <description>This is going to have the ID of the record copied into it and will be copied into the OM org to maintain a link back</description>
    <externalId>true</externalId>
    <label>NOVA ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>