force-app/main/default/objects/Account/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <description>This needs to look at the related household to determine if this applies to OM</description>
    <formula>IF(RecordType.DeveloperName = &quot;IndustriesHousehold&quot; &amp;&amp; ISPICKVAL( GroupCompany__c , &quot;OM&quot;) &amp;&amp; Id &lt;&gt; &quot;0018e000003CNci&quot; &amp;&amp;(ISPICKVAL(FinServ__Status__c,&quot;Active&quot;) || ISPICKVAL(FinServ__Status__c,&quot;Onboarding&quot;) || ISPICKVAL(FinServ__Status__c,&quot;Prospect&quot;)), CASESAFEID(Id), 

IF(RecordType.DeveloperName = &quot;PersonAccount&quot; &amp;&amp; ISPICKVAL( Household_Lookup__r.GroupCompany__c , &quot;OM&quot;) &amp;&amp; Household_Lookup__c &lt;&gt; &quot;0018e000003CNci&quot; &amp;&amp;(ISPICKVAL(Household_Lookup__r.FinServ__Status__c,&quot;Active&quot;) || ISPICKVAL(Household_Lookup__r.FinServ__Status__c,&quot;Onboarding&quot;) || ISPICKVAL(Household_Lookup__r.FinServ__Status__c,&quot;Prospect&quot;)), CASESAFEID(Household_Lookup__c), &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM record</label>
    <type>Text</type>
</CustomField>