force-app/main/default/objects/Account/fields/Other_Investments__c.field-meta.xml
<CustomField>
    <fullName>Other_Investments__c</fullName>
    <description>Specifies value of other investments person / household has</description>
    <label>Other investments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>