force-app/main/default/objects/Account/fields/Other_Investments_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Other_Investments_Frequency__c</fullName>
    <description>The frequency the value in the Other investments field relates to</description>
    <label>Other investments frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>