force-app/main/default/objects/Account/fields/OthersSavingMonthly__c.field-meta.xml
<CustomField>
    <fullName>OthersSavingMonthly__c</fullName>
    <description>Takes saving into other investments at any frequency and returns monthly figure</description>
    <formula>IF(  ISPICKVAL( Other_Investments_Frequency__c  ,&quot;Weekly&quot;), 52*Other_Investments__c/12,
IF(  ISPICKVAL(Other_Investments_Frequency__c ,&quot;Monthly&quot;), Other_Investments__c,
IF(  ISPICKVAL(Other_Investments_Frequency__c ,&quot;Annually&quot;), Other_Investments__c/12,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Others Saving (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>