force-app/main/default/objects/Account/fields/OW_customer_flag__c.field-meta.xml
<CustomField>
    <fullName>OW_customer_flag__c</fullName>
    <description>Used to flag that this customer falls into a particular category and should be treated / processed differently because of this.</description>
    <inlineHelpText>Please select any options that apply to this household. If chosen, visibility of the household will be restricted to those in the account team and with whom this account has been shared.</inlineHelpText>
    <label>Household customer flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>