force-app/main/default/objects/Account/fields/OW_dedicated_specialist__c.field-meta.xml
<CustomField>
    <fullName>OW_dedicated_specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the dedicated specialist user assigned to this household</description>
    <label>Dedicated specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>