force-app/main/default/objects/Account/fields/OW_email_client__c.field-meta.xml
<CustomField>
    <fullName>OW_email_client__c</fullName>
    <description>Returns the email client that this customer uses, for help in identifying email testing strategy.</description>
    <formula>RIGHT( PersonEmail, LEN( PersonEmail ) - FIND(  &quot;@&quot;,  PersonEmail ) )</formula>
    <label>Email client</label>
    <type>Text</type>
</CustomField>