force-app/main/default/objects/Account/fields/OW_email_duplicate_check__c.field-meta.xml
<CustomField>
    <fullName>OW_email_duplicate_check__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field stores whatever value is in the email field but is unique to ensure we do not end up with duplicate email addresses for people. The value here is updated using a before save flow.</description>
    <label>Email duplicate check</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>