force-app/main/default/objects/Account/fields/OW_essential_spending__c.field-meta.xml
<CustomField>
    <fullName>OW_essential_spending__c</fullName>
    <description>At a household level, we capture the amount of essential spending to feed in to lifeline modelling.</description>
    <label>Essential spending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>